--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <div class="card-body">
                         <h1 class="card-title pricing-card-title">$0.02&nbsp;<small class="text-muted">/ word</small></h1>
                         <ul class="list-unstyled mt-3 mb-4">
-                            <li>High-quality proof-reading of acedmic artcles&nbsp;</li>
+                            <li>High-quality proof-reading of academic articles</li>
                         </ul>
                     </div>
                 </div>
@@ -41,7 +41,7 @@
                     <div class="card-body">
                         <h1 class="card-title pricing-card-title">$0.03&nbsp;<small class="text-muted">/ word</small></h1>
                         <ul class="list-unstyled mt-3 mb-4">
-                            <li>Ideal for short articles or proposals&nbsp;</li>
+                            <li>Ideal for short articles or proposals</li>
                             <br>
                             <li>Translated by machine then proof-read by an expert</li>
                             <br>
