--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </a>
          </nav>
       </div>
-      <div class="container">
+      <div class="container mt-5">
          <h1>
             Best editorial services
             <small class="text-muted">with competitive prices</small>
@@ -73,8 +73,8 @@
       <div class="container">
          <div class="card-deck mb-3 text-center">
             <div class="card mb-4 box-shadow">
-               <div class="card-header bg-primary">
-                  <h4 class="my-0 font-weight-normal  text-white">Proofreading and correction service</h4>
+               <div class="card-header">
+                  <h4 class="my-0 font-weight-normal ">Proofreading and correction service</h4>
                </div>
                <div class="card-body">
                   <h1 class="card-title pricing-card-title" id="proofReadingPrice">$0.02&nbsp;<small class="text-muted">/ word</small></h1>
@@ -86,8 +86,8 @@
                </ul>
             </div>
             <div class="card mb-4 box-shadow">
-               <div class="card-header bg-primary">
-                  <h4 class="my-0 font-weight-normal text-white">Standard translation service</h4>
+               <div class="card-header">
+                  <h4 class="my-0 font-weight-normal">Standard translation service</h4>
                </div>
                <div class="card-body">
                   <h1 class="card-title pricing-card-title" id="translationPrice">$0.04&nbsp;<small class="text-muted">/ word</small></h1>
@@ -99,8 +99,8 @@
                </ul>
             </div>
             <div class="card mb-4 box-shadow">
-               <div class="card-header bg-primary">
-                  <h4 class="my-0 font-weight-normal  text-white">Original text composition</h4>
+               <div class="card-header">
+                  <h4 class="my-0 font-weight-normal ">Original text composition</h4>
                </div>
                <div class="card-body">
                   <h1 class="card-title pricing-card-title" id="originalCompositionPrice">$0.2&nbsp;<small class="text-muted">/ word</small></h1>
@@ -127,29 +127,29 @@
             </div>
          </form>
       </div>
-      <div class="container mt-3">
+      <div class="container mt-5">
          <h2>Other services</h2>
          <p>The price of the following services is estimated depending on the nature of the request</p>
          <div class="card-deck mb-3 text-center">
             <div class="card mb-4 box-shadow">
-               <div class="card-header bg-primary" style="border:none">
-                  <h4 class="my-0 font-weight-normal text-white">Mathematical modelling</h4>
+               <div class="card-header" style="border:none">
+                  <h4 class="my-0 font-weight-normal">Mathematical modelling</h4>
                </div>
                <ul class="list-group list-group-flush">
                   <li class="list-group-item">Mathematical models for various scientific problems</li>
                </ul>
             </div>
             <div class="card mb-4 box-shadow">
-               <div class="card-header bg-primary" style="border:none">
-                  <h4 class="my-0 font-weight-normal text-white">Matlab programming codes</h4>
+               <div class="card-header" style="border:none">
+                  <h4 class="my-0 font-weight-normal">Matlab programming codes</h4>
                </div>
                <ul class="list-group list-group-flush">
                   <li class="list-group-item">Matlab codes for diverse scientific applications</li>
                </ul>
             </div>
             <div class="card mb-4 box-shadow ">
-               <div class="card-header bg-primary" style="border:none">
-                  <h4 class="my-0 font-weight-normal text-white">Research articles consultation</h4>
+               <div class="card-header" style="border:none">
+                  <h4 class="my-0 font-weight-normal">Research articles consultation</h4>
                </div>
                <ul class="list-group list-group-flush">
                   <li class="list-group-item">Help you write and produce a complete scientific article and publish it in reputable indexed journals</li>
@@ -162,8 +162,8 @@
       </div>
       <div class="container py-3">
          <div class="row">
-            <div class="col-10 mx-auto">
-               <div class="accordion" id="faqExample">
+            <div class="col">
+               <div class="accordion w-100 mx-auto" id="faqExample">
                   <div class="card">
                      <div class="card-header p-2" id="headingOne">
                         <h5 class="mb-0">
