--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                </div>
                <ul class="list-group list-group-flush">
                   <li class="list-group-item">Paraphrasing to reduce similarity results</li>
-                  <li class="list-group-item">Helps you improve the over-all quality of your scientific publication</li>
+                  <li class="list-group-item">We provide similarity report for the paraphrased document</li>
                </ul>
             </div>
          </div>
