--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="container mt-5">
          <h1>
             Best editorial services
-            <small class="text-muted">with competitive prices</small>
+            <small class="text-muted">for competitive prices</small>
          </h1>
          <p >
             We offer a range of services that improve the quality of academic literature. Our small team is made from experts in technical writing — the standard form that is used in many scientific fields. This means that your document will have concise wording to help you better communicate your findings to the academic community. Check out our services below to see which one suits your needs the most! 
@@ -106,7 +106,7 @@
                   <h1 class="card-title pricing-card-title" id="originalCompositionPrice">$0.035&nbsp;<small class="text-muted">/ word</small></h1>
                </div>
                <ul class="list-group list-group-flush">
-                  <li class="list-group-item">Paraphrasing to reduce similarity results</li>
+                  <li class="list-group-item">Paraphrasing to reduce similarity</li>
                   <li class="list-group-item">We provide similarity report for the paraphrased document</li>
                </ul>
             </div>
@@ -174,7 +174,7 @@
                      </div>
                      <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#faqExample">
                         <div class="card-body">
-                           <b>Answer:</b> You send us the document that you want us to process. We will then determine the price, and send you a payment request. Once you pay, we will begin processing your request, and send you the processed document within a few working days.<br/>
+                           <b>Answer:</b> You send us the document that you want us to process. We will then determine the price, and send you a price quote. We will begin processing your document, then ask you to pay once we finish the work. Usually, we send the processed document within a few working days.<br/>
                            <br/>For paraphrasing, you will have to send us a similarity report (e.g. Turnitin report); otherwise, we will not be able to provide correct price estimation.
                         </div>
                      </div>
